manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-web-service
spec:
  type: ClusterIP
  selector:
    app: petclinic-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
